--- a/SpringBoot-Vue-OnlineExam-master/springboot/src/main/resources/application.properties
+++ b/SpringBoot-Vue-OnlineExam-master/springboot/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-server.port=8080
+server.port=8800
 spring.datasource.username=root
 spring.datasource.password=162279
-spring.datasource.url=jdbc:mysql://localhost:3306/exam?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://119.23.70.37:3306/exam?useUnicode=true&characterEncoding=UTF-8&useSSL=false&serverTimezone=UTC
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 mybatis.configuration.mapUnderscoreToCamelCase=true
